# where-my-project

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  TUI_SPEC.md  install.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
proj/: Cargo.toml
proj/src/cli/: args.rs  mod.rs
proj/src/cli/commands/: alias.rs  cd.rs  init.rs  list.rs  mod.rs  scan.rs  status.rs  version.rs  watch.rs  work.rs
proj/src/core/: git.rs  manager.rs  mod.rs  models.rs  scanner.rs  storage.rs
proj/src/tui/: list.rs  scan.rs
