[package]
name = "proj"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2"
colored = "2"
comfy-table = "7"
crossterm = "0.27"
indicatif = "0.17"
ratatui = "0.24"
